--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/root.css" />
     <link rel="stylesheet" href="assets/css/scrollbar.css">
 
+
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <title>Francode</title>
     <link rel="stylesheet" href="assets/css/body.css" />
     <link rel="stylesheet" href="assets/css/header.css" />
